# ClimateControlCenter

./: .env.example  Dockerfile  README.md  compose.yml  field_logger.py  javaremove.py  main.py  pyproject.toml  requirements.txt  run.py
src/: app.py
src/config/: settings.py
src/db/: connection.py  models.py
src/fieldLogger/: app.py  arduino.py  config.py  database.py
src/fieldLogger/ui/: dashboard.py  default.py
src/fieldLogger/utils/: calculate.py
src/hardware/: arduino.py  sensors.py
src/mock/: arduino.py
src/ui/: dashboard.py
src/utils/: calculations.py
